--- a/Project/SmartCalculator/SmartCalculator/MainPage.xaml
+++ b/Project/SmartCalculator/SmartCalculator/MainPage.xaml
@@ -21,15 +21,15 @@
         </Grid.RowDefinitions>
 
         <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
+        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,0,0,0">
             <TextBlock Text="SMART CALCULATOR" Style="{StaticResource PhoneTextNormalStyle}" Margin="12,0"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="2*"/>
-                <RowDefinition Height="3*"/>
+                <RowDefinition Height="7*"/>
+                <RowDefinition Height="8*"/>
             </Grid.RowDefinitions>
             
             <!--Main screen of calculater, we will load it dynamic-->
@@ -87,7 +87,7 @@
                         <ImageBrush ImageSource="Assets/Mu3.PNG"/>
                     </Button>
                     <Button Grid.Row="1" Grid.Column="4" Style="{StaticResource BoundButton}" Content="Log"
-                            Command="{Binding AddStringCMD}" CommandParameter="Log()"/>
+                            Command="{Binding AddStringCMD}" CommandParameter="Log()()"/>
                     <Button Grid.Row="1" Grid.Column="5" Grid.ColumnSpan="2" Style="{StaticResource SquareButton}" Content="DEL"
                             Command="{Binding DelCharCMD}"/>
 
